fixed text wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 a {color: black;}
-h1 {text-align: center;}
+h1 {font-size: 32pt; text-align: center;}
 
 #Intro {
     height: 100vh; 
